trunk/Archive2/7d/eb088ccbcab7b2/output
main.cpp:1:20: error: ISO C++ forbids declaration of ‘func_a’ with no type [-fpermissive]
 func_a(const int& i) { return i + 3; }
                    ^
main.cpp:2:13: error: ISO C++ forbids declaration of ‘func_b’ with no type [-fpermissive]
 func_b(int i) { return i + 3; }
             ^
